syntax = "proto3";

// Interface exported by the server.
service TwitterRoute {
    // Obtains the Features available within the given Rectangle.  Results are
    // streamed rather than returned at once (e.g. in a response message with a
    // repeated field), as the rectangle may cover a large area and contain a
    // huge number of features.
    rpc GetTweets(Params) returns (stream Tweet) {}
}


message Params {
    repeated string Track = 1;
    repeated string Language = 2;
    bool StallWarnings = 3;
    int32 Maxcount = 4;
}

message Tweet {
    string CreatedAt = 1;
    int64  RetweetCount = 2;
    string Text = 3;
    int32  Score = 4;
}

